[package]
name = "termml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
figlet-rs = "0.1.4"
smallvec = "1.10.0"
cap = "0.1.1"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
strong-xml = "0.6.3"