[package]
name = "termml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
figlet-rs = "0.1.4"
smallvec = "1.10.0"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
hard-xml = "0.6"
ureq = "2.5.0"
crossterm = "0.25.0"
renderer = { path = "renderer" }
web_parser = { path = "web_parser" }


[workspace]
members = [
    "renderer",
    "web_parser"
]